# Scolcraft

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  texture.json
cmake/: CompilerWarnings.cmake  Conan.cmake  StandardProjectSettings.cmake  cotire.cmake
resources/: texture.json
src/: CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  Window.cpp  Window.h  glew_includes.h  main.cpp
src/Events/: Dispatcher.h  KeyboardEvent.cpp  KeyboardEvent.h  MousePositionEvent.cpp  MousePositionEvent.h  Subscriber.h
src/Game/: Game.cpp  Game.h
src/Game/States/: MainState.cpp  MainState.h  State.h
src/Inputs/: InputManager.cpp  InputManager.h
src/OpenGL/: VertexArray.h
src/Renderer/: BlockFace.cpp  BlockFace.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkRenderer.cpp  ChunkRenderer.h  Mesh.cpp  Mesh.h  Vertex.h  WorldRenderer.cpp  WorldRenderer.h
src/Shaders/: DefaultProgram.cpp  DefaultProgram.h  DefaultShader.cpp  DefaultShader.h  Program.cpp  Program.h  Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  ShaderLoader.cpp  ShaderLoader.h
src/Texture/: Atlas.cpp  Atlas.h  AtlasTextureParser.cpp  AtlasTextureParser.h  Texture.cpp  Texture.h  loader.cpp  loader.h
src/Utils/: PerlinNoise.h  Profiler.cpp  Profiler.h
src/World/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h
src/World/Blocks/: Block.h  BlockTextureCoordinates.cpp  BlockTextureCoordinates.h  BlockType.cpp  BlockType.h
src/World/Chunks/: Chunk.cpp  Chunk.h  ChunkBlock.cpp  ChunkBlock.h  Generator.cpp  Generator.h
test/: CMakeLists.txt
